Refactor GetUserDetail API to work with both user_id and phone_number
