# cmd/portal/public_routes.go
@@ -21,7 +21,7 @@ func addPublicRoutes(router *mux.Router, cfg config.Config, sr *service.Registry
 		Path("/portal/v1/register").
 		Handler(handler.RegisterUserV1Handler(cfg, sr))
 
-	//	swagger:route GET /portal/user/{userID} public getUserDetails
+	//	swagger:route GET /portal/user/details public userDetails
 	//	Responses:
 	//		200: UserDetailsResponse
 	//		401:
@@ -31,6 +31,6 @@ func addPublicRoutes(router *mux.Router, cfg config.Config, sr *service.Registry
 	//		503: ErrorResponse
 	router.
 		Methods("GET").
-		Path("/portal/user/{userID}").
-		Handler(handler.GetUserByIDHandler(cfg, sr))
+		Path("/portal/user/details").
+		Handler(handler.UserDetailsHandler(cfg, sr))
 }
